<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.project.tfg.ui.registros.RegistrosFragment">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="329dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailSubject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="328dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_error" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="352dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_error" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="352dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#69ADF7"
            android:text="@string/register_btn"
            android:textSize="20sp"
            app:cornerRadius="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="169dp"
            android:layout_height="172dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_seeit"
            android:src="@drawable/ic_vector_eye"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="343dp"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_register_advice"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/email_input_error"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:textColor="#FF1E1E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

        <TextView
            android:id="@+id/password_input_error"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:textColor="#FF1E1E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>