package com.project.tfg

import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.accessibility.AccessibilityChecks
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.uiautomator.By
import androidx.test.uiautomator.UiDevice
import androidx.test.uiautomator.UiObject2
import com.google.firebase.auth.FirebaseAuth
import org.hamcrest.CoreMatchers.containsString
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith


@RunWith(AndroidJUnit4::class)
class EsecenaActivityInstrumentedTest {

    @Rule
    @JvmField
    val activityRule = ActivityScenarioRule(MainActivity::class.java)

    private lateinit var activityScenario: ActivityScenario<MainActivity>

    @Before
    fun setUp() {
        AccessibilityChecks.enable()
        FirebaseAuth.getInstance().signOut()
        activityScenario = ActivityScenario.launch(MainActivity::class.java)
    }

    @After
    fun tearDown() {
        activityScenario.close()
    }

    @Test
    fun testOnCreate() {
        onView(withId(R.id.funcionalidad_escena_img)).perform(click())
        onView(withText("Galería"))
            .check(matches(isDisplayed()))
        onView(withText("Cámara"))
            .check(matches(isDisplayed()))
        onView(withText("Cancelar"))
            .check(matches(isDisplayed()))
    }

    @Test
    fun analyzeImage() {
        val device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation())
        onView(withId(R.id.funcionalidad_escena_img)).perform(click())
        onView(withText("Galería")).perform(click())
        Thread.sleep(2000)

        val image: UiObject2 = device.findObject(By.text("plato_frutas_escena.jpg"))
        image.click()
        device.waitForIdle()
        Thread.sleep(5000)

        onView(withId(R.id.texto_resultado))
            .check(matches(isDisplayed()))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Descripción de la imagen: un plato con frutas"))))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Objetos detectados en la imagen"))))
    }

    @Test
    fun sharePicture() {
        val device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation())

        device.pressHome()
        val galleryApp = device.findObject(By.desc("Archivos"))
        galleryApp.click()
        Thread.sleep(5000)

        val image: UiObject2 = device.findObject(By.text("plato_frutas_escena.jpg"))
        image.click(5000)

        device.findObject(By.clickable(true).descContains("Compartir")).click()
        Thread.sleep(6000)
        device.findObject(By.text("Escena")).click()
        device.waitForIdle()
        Thread.sleep(5000)

        onView(withId(R.id.texto_resultado))
            .check(matches(isDisplayed()))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Descripción de la imagen: un plato con frutas"))))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Objetos detectados en la imagen"))))

    }

    @Test
    fun testRecordIsSaved() {
        val device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation())
        onView(withId(R.id.navigation_registros)).perform(click())
        onView(withId(R.id.access_btn)).perform(click())

        onView(withId(R.id.email_input)).perform(
            ViewActions.typeText("test@test.com"),
            ViewActions.closeSoftKeyboard()
        )
        onView(withId(R.id.password_input)).perform(
            ViewActions.typeText("Test1234@Test"),
            ViewActions.closeSoftKeyboard()
        )
        onView(withId(R.id.register_btn)).perform(ViewActions.scrollTo(), click())
        Thread.sleep(5000)

        onView(withId(R.id.navigation_funcionalidades)).perform(click())
        device.findObject(By.text("Escena")).click()
        onView(withText("Galería")).perform(click())
        Thread.sleep(5000)

        device.swipe(571, 993, 571, 993, 0)
        device.waitForIdle()
        Thread.sleep(5000)

        device.pressBack()
        onView(withId(R.id.navigation_registros)).perform(click())
        Thread.sleep(5000)

        // Encuentra el GridLayout que contiene las imágenes
        val gridLayout = device.findObject(By.clazz("android.widget.GridLayout"))
        // Encuentra el número total de columnas en el GridLayout
        val numColumnas = gridLayout.childCount
        // Encuentra la posición de la imagen específica en el GridLayout
        val filaObjetivo = 0 // Fila deseada (comienza en 0)
        val columnaObjetivo = 0 // Columna deseada (comienza en 0)
        val posicionObjetivo = filaObjetivo * numColumnas + columnaObjetivo
        val imagenEspecifica = gridLayout.children[posicionObjetivo]
        imagenEspecifica.click()
        Thread.sleep(5000)

        onView(withId(R.id.texto_resultado))
            .check(matches(isDisplayed()))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Descripción de la imagen: un plato con fruta"))))
        onView(withId(R.id.texto_resultado))
            .check(matches(withText(containsString("Objetos detectados en la imagen"))))

        device.pressBack()
        onView(withId(R.id.navigation_registros)).perform(click())
        onView(withId(R.id.delete_account_btn)).perform(click())
    }
}